--- a/package.json
+++ b/package.json
@@ -25,15 +25,12 @@
     "build"
   ],
   "devDependencies": {
-    "@ckeditor/ckeditor5-adapter-ckfinder": "^19.0.0",
     "@ckeditor/ckeditor5-autoformat": "^19.0.0",
     "@ckeditor/ckeditor5-basic-styles": "^19.0.0",
     "@ckeditor/ckeditor5-block-quote": "^19.0.0",
-    "@ckeditor/ckeditor5-ckfinder": "^19.0.0",
     "@ckeditor/ckeditor5-core": "^19.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^13.0.0",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^9.0.0",
-    "@ckeditor/ckeditor5-easy-image": "^19.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^19.0.0",
     "@ckeditor/ckeditor5-essentials": "^19.0.0",
     "@ckeditor/ckeditor5-heading": "^19.0.0",
@@ -43,7 +40,6 @@
     "@ckeditor/ckeditor5-list": "^19.0.0",
     "@ckeditor/ckeditor5-media-embed": "^19.0.0",
     "@ckeditor/ckeditor5-paragraph": "^19.0.0",
-    "@ckeditor/ckeditor5-paste-from-office": "^19.0.0",
     "@ckeditor/ckeditor5-table": "^19.0.0",
     "@ckeditor/ckeditor5-typing": "^19.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^19.0.0",
@@ -94,5 +90,11 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^19.0.0",
+    "@ckeditor/ckeditor5-code-block": "^19.0.0",
+    "@ckeditor/ckeditor5-font": "^19.0.0",
+    "@ckeditor/ckeditor5-upload": "^19.0.0"
   }
 }
